// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component should match snapshots 1`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.Input-module__wrapper___sArf- {
  position: relative;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

<div>
  <div
    class="FieldGroup-module__field-group___H0qA5"
  >
    <div
      class="Input-module__wrapper___sArf-"
    >
      <input
        class="TextInput-module__text-input___VCylJ"
        id="input-0"
        maxlength="255"
        minlength="0"
        placeholder=""
        style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Input component should match snapshots 2`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.Input-module__wrapper___sArf- {
  position: relative;
}

.Input-module__input-icon___gieRN {
  bottom: calc(var(--qtm-spacing-xsmall)*1.25);
  color: inherit;
  cursor: pointer;
  position: absolute;
  right: var(--qtm-spacing-medium);
  width: calc(var(--qtm-base-font-size)*1.5);
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.TextInput-module__has-default-value___o7STi {
  background-color: var(--qtm-colors-primary-100);
}

<div>
  <div
    class="FieldGroup-module__field-group___H0qA5"
  >
    <div
      class="Input-module__wrapper___sArf-"
    >
      <input
        class="TextInput-module__text-input___VCylJ TextInput-module__has-default-value___o7STi"
        id="input-1"
        maxlength="255"
        minlength="0"
        placeholder=""
        style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
        type="text"
        value="foo"
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Input-module__input-icon___gieRN css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ClearIcon"
        description=""
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Input component should match snapshots 3`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.Input-module__wrapper___sArf- {
  position: relative;
}

.InputLabel-module__input-label___u-ovg {
  color: inherit;
  display: block;
  font-weight: 700;
  margin: var(--qtm-spacing-xsmall) 0 0;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.TextInput-module__with-label___NwMP5 {
  margin-top: var(--qtm-spacing-xsmall);
}

<div>
  <div
    class="FieldGroup-module__field-group___H0qA5"
  >
    <label
      class="InputLabel-module__input-label___u-ovg"
      for="input-2"
    >
      Text label
    </label>
    <div
      class="Input-module__wrapper___sArf-"
    >
      <input
        class="TextInput-module__text-input___VCylJ TextInput-module__with-label___NwMP5"
        id="input-2"
        maxlength="255"
        minlength="0"
        placeholder=""
        style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Input component should match snapshots 4`] = `
.ErrorMessage-module__error-message___MWbU- {
  color: var(--qtm-colors-error-900);
  cursor: text;
  display: block;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
  line-height: normal;
  margin-top: var(--qtm-spacing-xsmall);
}

.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.Input-module__wrapper___sArf- {
  position: relative;
}

.Input-module__input-icon___gieRN {
  bottom: calc(var(--qtm-spacing-xsmall)*1.25);
  color: inherit;
  cursor: pointer;
  position: absolute;
  right: var(--qtm-spacing-medium);
  width: calc(var(--qtm-base-font-size)*1.5);
}

.Input-module__error-icon-default___eeNn1 {
  color: var(--qtm-colors-error-700);
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.TextInput-module__error___nPcHX,
.TextInput-module__error___nPcHX:focus,
.TextInput-module__error___nPcHX:hover {
  border-color: var(--qtm-colors-error-700);
}

<div>
  <div
    class="FieldGroup-module__field-group___H0qA5"
  >
    <div
      class="Input-module__wrapper___sArf-"
    >
      <input
        class="TextInput-module__text-input___VCylJ TextInput-module__error___nPcHX"
        id="input-3"
        maxlength="255"
        minlength="0"
        placeholder=""
        style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
        type="text"
        value=""
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Input-module__input-icon___gieRN Input-module__error-icon-default___eeNn1 css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ErrorIcon"
        description=""
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z"
        />
      </svg>
    </div>
    <span
      class="ErrorMessage-module__error-message___MWbU-"
    >
      Error message
    </span>
  </div>
</div>
`;

exports[`Input component should match snapshots 5`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.Input-module__wrapper___sArf- {
  position: relative;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

<div>
  <div
    class="FieldGroup-module__field-group___H0qA5"
  >
    <div
      class="Input-module__wrapper___sArf-"
    >
      <input
        class="TextInput-module__text-input___VCylJ"
        id="input-4"
        maxlength="255"
        minlength="0"
        placeholder=""
        required=""
        style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Input component should match snapshots 6`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.Input-module__wrapper___sArf- {
  position: relative;
}

.Input-module__input-icon___gieRN {
  bottom: calc(var(--qtm-spacing-xsmall)*1.25);
  color: inherit;
  cursor: pointer;
  position: absolute;
  right: var(--qtm-spacing-medium);
  width: calc(var(--qtm-base-font-size)*1.5);
}

.Input-module__search-icon___s5j0Q {
  left: var(--qtm-spacing-medium);
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

<div>
  <div
    class="FieldGroup-module__field-group___H0qA5"
  >
    <div
      class="Input-module__wrapper___sArf-"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Input-module__input-icon___gieRN Input-module__search-icon___s5j0Q css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="SearchIcon"
        description=""
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14"
        />
      </svg>
      <input
        class="TextInput-module__text-input___VCylJ"
        id="input-5"
        maxlength="255"
        minlength="0"
        placeholder=""
        style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
        type="search"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Input component should match snapshots 7`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.Input-module__wrapper___sArf- {
  position: relative;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

<div>
  <div
    class="FieldGroup-module__field-group___H0qA5"
  >
    <div
      class="Input-module__wrapper___sArf-"
    >
      <input
        class="TextInput-module__text-input___VCylJ"
        disabled=""
        id="input-6"
        maxlength="255"
        minlength="0"
        placeholder=""
        style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Input component should match snapshots 8`] = `
.ErrorMessage-module__error-message___MWbU- {
  color: var(--qtm-colors-error-900);
  cursor: text;
  display: block;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
  line-height: normal;
  margin-top: var(--qtm-spacing-xsmall);
}

.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.Input-module__wrapper___sArf- {
  position: relative;
}

.HelperText-module__helper-text___e4Vp- {
  color: inherit!important;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

<div>
  <div
    class="FieldGroup-module__field-group___H0qA5"
  >
    <div
      class="Input-module__wrapper___sArf-"
    >
      <input
        class="TextInput-module__text-input___VCylJ"
        id="input-7"
        maxlength="255"
        minlength="0"
        placeholder=""
        style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
        type="text"
        value=""
      />
    </div>
    <span
      class="ErrorMessage-module__error-message___MWbU- HelperText-module__helper-text___e4Vp-"
    >
      this is a helper text
    </span>
  </div>
</div>
`;

exports[`Input component should match snapshots 9`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.Input-module__wrapper___sArf- {
  position: relative;
}

.Input-module__description-label___cVsmq {
  color: inherit;
  cursor: text;
  display: block;
  font-size: calc(var(--qtm-base-font-size)*.875);
  padding: 0;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

<div>
  <div
    class="FieldGroup-module__field-group___H0qA5"
  >
    <span
      class="Input-module__description-label___cVsmq"
    >
      this is a description label
    </span>
    <div
      class="Input-module__wrapper___sArf-"
    >
      <input
        class="TextInput-module__text-input___VCylJ"
        id="input-8"
        maxlength="255"
        minlength="0"
        placeholder=""
        style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Input component should match snapshots 10`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.Input-module__wrapper___sArf- {
  position: relative;
}

.Input-module__description-label___cVsmq {
  color: inherit;
  cursor: text;
  display: block;
  font-size: calc(var(--qtm-base-font-size)*.875);
  padding: 0;
}

.Input-module__input-icon___gieRN {
  bottom: calc(var(--qtm-spacing-xsmall)*1.25);
  color: inherit;
  cursor: pointer;
  position: absolute;
  right: var(--qtm-spacing-medium);
  width: calc(var(--qtm-base-font-size)*1.5);
}

.Input-module__search-icon___s5j0Q {
  left: var(--qtm-spacing-medium);
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

<div>
  <div
    class="FieldGroup-module__field-group___H0qA5"
  >
    <span
      class="Input-module__description-label___cVsmq"
    >
      this is a description label
    </span>
    <div
      class="Input-module__wrapper___sArf-"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Input-module__input-icon___gieRN Input-module__search-icon___s5j0Q css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="SearchIcon"
        description="this is a description label"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14"
        />
      </svg>
      <input
        class="TextInput-module__text-input___VCylJ"
        id="input-9"
        maxlength="255"
        minlength="0"
        placeholder=""
        style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
        type="search"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Input component should match snapshots 11`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.Input-module__wrapper___sArf- {
  position: relative;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

<div>
  <div
    class="FieldGroup-module__field-group___H0qA5"
  >
    <div
      class="Input-module__wrapper___sArf-"
    >
      <input
        class="TextInput-module__text-input___VCylJ"
        id="input-10"
        maxlength="255"
        minlength="0"
        placeholder="this input has a placeholder"
        style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Input component should match snapshots 12`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.Input-module__wrapper___sArf- {
  position: relative;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

<div>
  <div
    class="FieldGroup-module__field-group___H0qA5"
  >
    <div
      class="Input-module__wrapper___sArf-"
    >
      <input
        class="TextInput-module__text-input___VCylJ"
        id="input-11"
        maxlength="255"
        minlength="0"
        placeholder=""
        style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Input component should match snapshots 13`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.Input-module__wrapper___sArf- {
  position: relative;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

<div>
  <div
    class="FieldGroup-module__field-group___H0qA5"
  >
    <div
      class="Input-module__wrapper___sArf-"
    >
      <input
        class="TextInput-module__text-input___VCylJ"
        id="input-12"
        maxlength="255"
        minlength="0"
        placeholder=""
        style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Input component should match snapshots 14`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.Input-module__wrapper___sArf- {
  position: relative;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

<div>
  <div
    class="FieldGroup-module__field-group___H0qA5"
  >
    <div
      class="Input-module__wrapper___sArf-"
    >
      <input
        class="TextInput-module__text-input___VCylJ"
        id="input-13"
        maxlength="255"
        minlength="0"
        placeholder=""
        style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Input component should match snapshots 15`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.Input-module__wrapper___sArf- {
  position: relative;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

<div>
  <div
    class="FieldGroup-module__field-group___H0qA5"
  >
    <div
      class="Input-module__wrapper___sArf-"
    >
      <input
        class="TextInput-module__text-input___VCylJ"
        id="input-14"
        maxlength="255"
        minlength="0"
        placeholder=""
        style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Input component should match snapshots 16`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.Input-module__wrapper___sArf- {
  position: relative;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

<div>
  <div
    class="FieldGroup-module__field-group___H0qA5"
  >
    <div
      class="Input-module__wrapper___sArf-"
    >
      <input
        class="TextInput-module__text-input___VCylJ"
        id="input-15"
        maxlength="255"
        minlength="0"
        placeholder=""
        style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Input component should match snapshots 17`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.Input-module__wrapper___sArf- {
  position: relative;
}

.Input-module__input-icon___gieRN {
  bottom: calc(var(--qtm-spacing-xsmall)*1.25);
  color: inherit;
  cursor: pointer;
  position: absolute;
  right: var(--qtm-spacing-medium);
  width: calc(var(--qtm-base-font-size)*1.5);
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

<div>
  <div
    class="FieldGroup-module__field-group___H0qA5"
  >
    <div
      class="Input-module__wrapper___sArf-"
    >
      <input
        class="TextInput-module__text-input___VCylJ"
        id="input-16"
        maxlength="255"
        minlength="0"
        placeholder=""
        style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
        type="password"
        value=""
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Input-module__input-icon___gieRN css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="VisibilityIcon"
        description=""
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5M12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5m0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3"
        />
      </svg>
    </div>
  </div>
</div>
`;
